--- a/sass/_mobileNav.scss
+++ b/sass/_mobileNav.scss
@@ -1,11 +1,15 @@
 @media only screen and (max-width: 1199px) {
-
+	
+	.mobilenavopen #nav2 {
+		display: block;
+	}
+	
 	#nav2 {
 		background: rgba(0, 0, 0, .95);
 		-moz-box-sizing: border-box;
 		-webkit-box-sizing: border-box;
 		box-sizing: border-box;
-		height: 100vh;
+		display: none;
 		padding: 20px;
 		position: fixed;
 			top: 0;
@@ -60,51 +64,49 @@
 					}
 				}
 			}
-		}
-		
-		/* Second Level */
-		ul ul {
-			background: none;
-			border: 0;
-			display: block;
-			margin: 0;
-			max-height: 0;
-			opacity:0;
-			overflow: hidden;
-			padding: 0;
-			position: relative;
-			-webkit-transition: all 0.2s ease;
-			-moz-transition: all 0.2s ease;
-			transition: all 0.2s ease;
-			width: 100%;
-			z-index: 999999;
-		}
-		
-		ul ul.show {
-			max-height: 500px;
-			opacity: 1;
-			-webkit-transition: all 0.8s ease;
-			-moz-transition: all 0.8s ease;
-			transition: all 0.8s ease;
-		}
-		
-		ul ul li:first-child {
-			border-top: 1px solid rgba(255, 255, 255, 0.2);
-		}
-		
-		ul ul li:last-child {
-			border-bottom: 0;
-		}
-		
-		ul ul a,
-		ul ul a:link,
-		ul ul a:visited {
-			color: #aaa;
-			padding: 10px 0 10px 20px;
-		}
-		
-		ul ul a:hover {
-			color: #fff;
+			
+			/* Second Level */
+			ul {
+				background: none;
+				border: 0;
+				display: block;
+				margin: 0;
+				max-height: 0;
+				opacity:0;
+				overflow: hidden;
+				padding: 0;
+				position: relative;
+				-webkit-transition: all 0.2s ease;
+				-moz-transition: all 0.2s ease;
+				transition: all 0.2s ease;
+				width: 100%;
+				z-index: 999999;
+				&.show {
+					max-height: 500px;
+					opacity: 1;
+					-webkit-transition: all 0.8s ease;
+					-moz-transition: all 0.8s ease;
+					transition: all 0.8s ease;
+				}
+				li {
+					&:first-child {
+						border-top: 1px solid rgba(255, 255, 255, 0.2);
+					}
+					
+					&:last-child {
+						border-bottom: 0;
+					}
+					a,
+					a:link,
+					a:visited {
+						color: #aaa;
+						padding: 10px 0 10px 20px;
+					}
+				}
+				
+				
+			}
+			
 		}
 		
 		.sub_nav {
@@ -112,8 +114,8 @@
 			display: block;
 			float: right;
 			position: absolute;
-			right: 0;
-			top: 12px;
+				right: 0;
+				top: 12px;
 			margin: 0;
 			padding: 0;
 			z-index: 500;
